src/test/deca/context/invalid/homemade/tests/test366_champ_inaccessible_methode.deca
// test invalide de la règle 3.66


class A{
    protected int x = 5;
    int getX(){
        return this.x;
    }
}


{
    A a = new A();
    println("x = ", a.getX);
}
